[package]
name = "lock-free-stack"
version = "0.1.1"
authors = ["sombr <serge.toropov@gmail.com>"]

description = "Lock-free (atomic-based) Collection which internally represent data as a Stack, and exposes an interface allowing to add elements, get size, and remove all giving a reverse-iterator."
keywords = ["lock-free", "stack", "collection"]

homepage = "https://github.com/sombr/rust-lock-free-stack"
repository = "https://github.com/sombr/rust-lock-free-stack"

license = "MIT"

[dependencies]
